--- a/juju/.settings/org.eclipse.core.resources.prefs
+++ b/juju/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/views/appo.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/empty.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/footer.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/index.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/info.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/treat.jsp=UTF-8
